manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: filebrowser
