manifests/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  to:
    kind: Service
    name: filebrowser
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
